# Hackathon_rewire_HS

./: .dockerignore  .gitignore  Hackathon_rewire_HS.sln  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_local_mac.sh  run_local_ubuntu.sh  test.py
.github/workflows/: ci.yml
backend/: README.md  backend.sln  create_tables.sql
backend/FoodVenikWebApi/: ChatHub.cs  Contracts.cs  FoodVenikWebApi.csproj  FoodVenikWebApi.http  Program.cs
backend/FoodVenikWebApi/Properties/: launchSettings.json
backend/database/: create_tables.sql  structure.txt
backend/sample-agent/: main.py  pyproject.toml  requirements.txt
data_processing/: Dockerfile
data_processing/ETL/: Dockerfile  requirements.txt
data_processing/ETL/Jumbo/: html_parser.py
data_processing/Jumbo/: s3_stream_processor_simple.py
data_processing/scraping/: Dockerfile  requirements.txt
data_processing/scraping/Jumbo/: run_all.py  scraper.py
data_processing/scraping/Jumbo/config/: categories.yaml  extended_categories.yml
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/hackathon-frontend-v2/: package-lock.json  package.json
frontend/hackathon-frontend-v2/src/app/: app.ts
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.spec.ts
frontend/src/app/chat-window/: chat-window.css  chat-window.html  chat-window.ts  chat.ts
frontend/src/app/dossier/: dossier-service.ts  dossier.css  dossier.html  dossier.ts
project_description/: README.md
scraping/Jumbo/: link_collector.py
shared/: log.py  models.py
(+31 files in other folders)
