[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon_rewire_hs"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

# pytest.ini
[pytest]
testpaths = tests
addopts = -q
markers =
    slow: marks tests as slow (skip in CI)
