[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon_rewire_hs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pika>=1.3.2",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.workspace]
members = [
    "backend/sample-agent",
]

